# SolanaArbitrageTrader

./: .env.example  .env.test  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  results.tsv
ArbitrageTrader/arbitrage_bot_trader/: .env.example  .gitignore  README.md  SESSION_LOG.md  crypto_arbitrage_bot_recommendations.md  pyproject.toml
ArbitrageTrader/arbitrage_bot_trader/config/: onchain_config.json
ArbitrageTrader/arbitrage_bot_trader/contracts/: FlashArbExecutor.sol
ArbitrageTrader/arbitrage_bot_trader/src/arbitrage_bot/: __init__.py  bot.py  chain_executor.py  config.py  contracts.py  env.py  event_listener.py  executor.py  fork_scanner.py  historical_market.py  live_market.py  log.py  log_parser.py  main.py  market.py  models.py  onchain_market.py  pair_scanner.py  perf_tracker.py  price_downloader.py  scanner.py  show_prices.py  strategy.py  subgraph_market.py  subgraphs.py  tokens.py
ArbitrageTrader/arbitrage_bot_trader/src/arbitrage_bot_repro.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ArbitrageTrader/arbitrage_bot_trader/tests/: test_bot.py  test_chain_executor.py  test_config.py  test_event_listener.py  test_executor.py  test_fork_scanner.py  test_historical_market.py  test_live_market.py  test_market.py  test_multi_pair.py  test_onchain_market.py  test_outlier_filter.py  test_pair_scanner.py  test_perf_tracker.py  test_price_downloader.py  test_scanner.py  test_strategy.py  test_subgraph_market.py
claude_session/: autonomous_brief.md  autonomous_report.md  current.md
config/: example_config.json  (+2 more)
(+261 files in other folders)
